--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^7.3.5",
     "@tanstack/react-query": "^5.90.11",
     "axios": "^1.13.2",
+    "cookie": "^1.1.1",
     "formik": "^2.4.9",
     "next": "^16.0.7",
     "react": "19.2.0",
